Moved assert method from page object to test.

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>allure-junit-adaptor</artifactId>
             <version>${allure.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.truth</groupId>
+            <artifactId>truth</artifactId>
+            <version>0.27</version>
+        </dependency>
     </dependencies>
 
 
